# ping-viewer-next

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: action.yml
blueos-ping-viewer-next/: Dockerfile  README.md
blueos-ping-viewer-next/files/: entrypoint.sh
ping-viewer-next-desktop/: .gitignore  README.md  bun.lockb  index.html  package.json
ping-viewer-next-desktop/src/: App.vue
ping-viewer-next-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ping-viewer-next-desktop/src-tauri/src/: main.rs
ping-viewer-next-frontend/: .eslintrc-auto-import.json  .eslintrc.js  biome.json  bun.lockb  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
ping-viewer-next-frontend/src/: App.vue  main.js
ping-viewer-next-frontend/src/components/utils/: ColorPickerField.vue  ConnectionManager.vue  DeviceCard.vue  DeviceManager.vue  MavlinkSettings.vue  ServerConnection.vue  VisualSettings.vue
ping-viewer-next-frontend/src/components/views/: DevicesView.vue  MultiView.vue  ReplayView.vue  SettingsView.vue  StatisticsView.vue  TryComponentView.vue  WebsocketAnalysisView.vue
ping-viewer-next-frontend/src/components/widgets/: DataPlayer.vue  DataRecorder.vue  FloatingControls.vue  SonarColorOptions.vue  WebsocketClient.vue
ping-viewer-next-frontend/src/components/widgets/sonar1d/: Ping1D.vue  Ping1DLoader.vue  Ping1DSettings.vue  WaterfallMask.vue  WaterfallShader.vue
ping-viewer-next-frontend/src/components/widgets/sonar360/: Ping360.vue  Ping360Loader.vue  Ping360Settings.vue  Sonar360Mask.vue  Sonar360Shader.vue
ping-viewer-next-frontend/src/composables/: useDeviceFetching.js  useMenuCoordination.js
ping-viewer-next-frontend/src/layouts/: default.vue
ping-viewer-next-frontend/src/pages/addons/widget/: index.vue
ping-viewer-next-frontend/src/pages/addons/widget/[type]/: index.vue
ping-viewer-next-frontend/src/pages/addons/widget/components/: SonarMask.vue
ping-viewer-next-frontend/src/ping-device/services/: api-service.ts  device-agent.ts  polar-mode-service.ts
ping-viewer-next-frontend/src/ping-device/types/: common.ts  ping1d.ts  ping360.ts  requests.ts  responses.ts
ping-viewer-next-frontend/src/ping-device/utils/: constants.ts  ping360-utils.ts
ping-viewer-next-frontend/src/plugins/: index.js  vuetify.js
ping-viewer-next-frontend/src/router/: index.js
ping-viewer-next-frontend/src/stores/: deviceAgent.ts
ping-viewer-next-frontend/src/views/: Main.vue
src/: lib.rs  main.rs
src/cli/: manager.rs
src/device/: devices.rs  manager.rs  mod.rs
src/device/manager/: continuous_mode.rs  device_discovery.rs  device_handle.rs  discovery_service.rs  mod.rs
src/logger/: manager.rs
src/server/: manager.rs  mod.rs
src/server/protocols/v1/: errors.rs  mod.rs  rest.rs  websocket.rs
src/server/protocols/v1/frontend/: index.html
