[package]
name = "ping-viewer-next"
version = "0.0.0"
edition = "2021"
authors = ["Raul Victor Trombin <raulvtrombin@gmail.com>"]
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Ping devices family"
repository = "https://github.com/bluerobotics/ping-viewer-next"
license = "MIT"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.9.0"
bluerobotics-ping = "0.3.3"
actix-web-actors = "4.3.0"
chrono = "0.4.38"
clap = {version = "4.5.17", features = ["derive"] }
lazy_static = "1.5.0"
mime_guess = "2.0.4"
paperclip = { version = "0.9.1" , features = ["actix4", "swagger-ui", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.10.6"
rust-embed = "8.4.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-serial = "5.4.4"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-tracy = {version = "0.11.0", features = ["ondemand"] }
udp-stream = "0.0.12"
uuid = { version = "1.10.0", features = ["serde"] }
validator = "0.18.1"
thiserror = "1.0.63"
shellexpand = "3.1"

reqwest = {version = "0.12.12", features = ["json"], optional = true }
openssl = { version = "0.10.69", features = ["vendored"], optional = true }
dirs = "6.0.0"


[build-dependencies]
vergen-gix = { version = "1.0.1", default-features = false, features = ["build", "cargo"] }

[lib]
name = "ping_viewer_next"
path = "src/lib.rs"

[[bin]]
name = "ping-viewer-next"
path = "src/main.rs"

[features]
default = ["blueos-extension"]
desktop-app = ["build-frontend"]
build-frontend = ["embed-frontend"]
embed-frontend =[]
blueos-extension = ["dep:reqwest", "dep:openssl"]
